# openlife

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_density_graph.py  create_report.py  error.txt  errors.txt  evalnotes.md  improvements.md  makefile  network.py  params.txt  plot.py  report.tex  test_params.py  variances.txt
hypotheses/: crowded_limit_network_count_hypothesis  crowded_limit_network_size_hypothesis  move_modifier_population_hypothesis  neighbor_radius_area_hypothesis
output/param_testing/: metricDicts.pkl
src/: arena.cpp  arena.hpp  board.cpp  board.hpp  cell.cpp  cell.hpp  cliargparser.cpp  cliargparser.hpp  main.cpp  physics.hpp  tools.hpp
src/libopenlife/: cell.cpp  cell.hpp  entity.cpp  entity.hpp  genome.cpp  genome.hpp  paramdict.cpp  paramdict.hpp  physics.cpp  physics.hpp  simulation.cpp  simulation.hpp  tools.cpp  tools.hpp
src/lifeboard/: args.cpp  args.hpp  board.cpp  board.hpp  main.cpp
src/objects/: .genome.cpp.kate-swp  board.cpp  board.hpp  cell.cpp  cell.hpp  entity.cpp  entity.hpp  food.cpp  food.hpp  genome.cpp  genome.hpp  point.hpp  simulation.cpp  simulation.hpp
src/openlifelib/: board.cpp  board.hpp  cell.cpp  cell.hpp  entity.cpp  entity.hpp  genome.cpp  simulation.cpp  simulation.hpp
src/tools/: physics.hpp  tools.cpp  tools.hpp
tests/: tools.cpp
